--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ background-position: center;
     <h1 class="title-t2">2023 신년계획</h1>
     <p class="msg">올해는 목표이루자!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center">운동하기</div>
+        <div class="bucket img1 center done">운동하기</div>
         <div class="bucket img2 center">영어공부</div>
         <div class="bucket img2-t5 center">집안정리</div>
         <div class="bucket img1-t4 center">용어외우기</div>
